[package]
name = "td3d"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { package = "bevy", version = "0.14", features = ["wayland"] }
bevy_mod_picking = { version = "0.20.1", features = ["backend_rapier"], default-features = false }
bevy_rapier3d = { version = "0.27.0", features = ["debug-render-3d", "simd-nightly"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[workspace]
resolver = "2"

[features]
default = ["bevy/dynamic_linking"]
